Adds Test Project

--- a/TestProject/Test/TestProject1.csproj
+++ b/TestProject/Test/TestProject1.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PromotionEngine\PromotionEngine.csproj" />
+    <ProjectReference Include="..\..\PromotionEngine.csproj" />
   </ItemGroup>
 
 </Project>
